2009-02-24  Andreas K. Foerster  <info@akfoerster.de>

	* version 0.16.0 released

2009-02-21  Andreas K. Foerster  <info@akfoerster.de>

	* avtarsay.c (run_info):
	enforce UTF-8 for german info pages

2009-02-15  Andreas K. Foerster  <info@akfoerster.de>

	* avatar-audio.c (fillaudio):
	pause the sound system after playing the sound

2009-02-14  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_choice):
	use of mouse-wheel + other changes

2009-02-10  Andreas K. Foerster  <info@akfoerster.de>

	* avtterm.c (avtterm_initialize):
	support macro USE_OPENPTY for old/broken systems

2009-02-09  Andreas K. Foerster  <info@akfoerster.de>

	* avatarsay.c (set_encoding), avtterm.c (set_encoding):
	fallback to US-ASCII if encoding not supported by iconv

2009-02-06  Andreas K. Foerster  <info@akfoerster.de>

	* avatarsay.c (avatar_command):
	command: avatarimage info

2009-02-04  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_wait_button, avt_wait_key, avt_decide):
	call avt_analyze_event, better handling of screen positions

2009-02-02  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (background_color):
	new variable, many functions adapted

2009-01-30  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, avatar.c (avt_decide):
	new function

2009-01-29  Andreas K. Foerster  <info@akfoerster.de>

	* avatarsay.c (handle_back_command):
	accepts text to be printed

	* avatarsay.c (say_line):
	no backspace before line-ending

	* akfavatar.h, avatar.c (avt_home_position):
	new function

2009-01-26  Andreas K. Foerster  <info@akfoerster.de>

	* bdfread.c:
	rewrite bdfread.pas to plain C (with some help from p2c)

	* Makefile.in, configure:
	generate code for fonts from bdf file using bdfread
	no longer support qvga

2009-01-25  Andreas K. Foerster  <info@akfoerster.de>

	* bdfread.pas:
	fix code for isolated characters (closes bug #25402)

	* avtfilechooser.c (get_file):
	from root directory do back to main menu
